src/test/deca/etapeB/invalid/modulo_on_float.deca
// Description : 
// 	test de declaration d'un void 
//Resultat:
//      Erreur Contextuelle :on peut pas declarer un type void;
{
}